typescript/checker/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings07_ES5.ts.stderr
error: Invalid unciode code point
 --> $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings07_ES5.ts:5:13
  |
5 | var x = "\u{110000}";
  |             ^^^^^^

